# clawpier

./: .gitignore  .impeccable.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
dev/: ROADMAP.md
scripts/: bump-version.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: bot_store.rs  chat_store.rs  commands.rs  docker_manager.rs  error.rs  lib.rs  main.rs  models.rs  state.rs  streaming.rs
src/components/: BotCard.tsx  BotDetail.tsx  BotList.tsx  BotListHeader.tsx  ChatMessage.tsx  ChatTab.tsx  ConfigDashboard.tsx  DeleteConfirm.tsx  DockerConnectionBanner.tsx  DockerError.tsx  EmptyState.tsx  EnvVarEditor.tsx  ErrorBoundary.tsx  FileBrowser.tsx  FocusTrap.tsx  ImageMissing.tsx  Layout.tsx  LogViewer.tsx  NetworkBadge.tsx  NetworkModePicker.tsx  NewBotSheet.tsx  NotificationCenter.tsx  PortMappingEditor.tsx  ResourceLimitsEditor.tsx  ShortcutSheet.tsx  SkillBrowser.tsx  Sparkline.tsx  StatusBadge.tsx  Toast.tsx  WelcomeScreen.tsx
src/hooks/: use-auto-restart.ts  use-bot-events.ts  use-chat.ts  use-container-logs.ts  use-container-stats.ts  use-health-events.ts  use-interactive-terminal.ts  use-keyboard-shortcuts.ts  use-resource-alerts.ts  use-restart-progress.ts  use-skill-browser.ts  use-status-notifications.ts  use-toast.ts  use-zoom.ts
src/lib/: filter-bots.ts  tauri.ts  theme.ts  types.ts  window-state.ts
src/stores/: bot-store.ts  notification-store.ts  toast-store.ts
(+15 files in other folders)
