[package]
name = "clawpier"
version = "0.1.0"
description = "OpenClaw Manager - Manage sandboxed OpenClaw bot instances"
authors = ["Runchao Han"]
edition = "2021"

[lib]
name = "clawpier_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
bollard = "0.18"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
thiserror = "2"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.32"

[dev-dependencies]
bytes = "1"
tempfile = "3"
